update link. Relates #34

--- a/createAccount/createAccount.html
+++ b/createAccount/createAccount.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="sign-up.css">
+    <link rel="stylesheet" href="../createAccount/createAccount.html">
 
     <title>Shopello</title>
 </head>
@@ -14,7 +14,7 @@
       <!--link to login page-->
       <header class="container">
         <h1>Create Account</h1>
-        <p>Already have an account? <a href="login.html" style="color:#2CB674">Login</a>.</p>
+        <p>Already have an account? <a href="../login/login.html" style="color:#2CB674">Login</a>.</p>
         </header>
         <form>
             <div class="form">
@@ -22,20 +22,20 @@
           <div class="nameIcon">
             <label for="name">Name</label>
             <input id="name" type="text" placeholder="Enter Your Full Name" name="name" required >
-            <img class="nameimg" src="assets/img/user.svg">
+            <img class="nameimg" src="../assets/img/user.svg">
           </div>
             <!--Email input and icon-->
             <div class="mailIcon">
             <label for="email">Email</label>
             <input id="email" type="text" placeholder="Enter Your Email" name="email" required>
-            <img class="mailimg" src="assets/img/email.svg">
+            <img class="mailimg" src="../assets/img/email.svg">
             </div>
             <!-- password Input and Icons-->
             <div class="pswIcon">
             <label for="password" id="password">Password</label>
             <input id="password" type="password" placeholder="Enter Your Password" name="password" required>
-            <img  class="pswimg" src="assets/img/password.svg">
-            <img class="hidePsw" src="assets/img/hideEye.svg">
+            <img  class="pswimg" src="../assets/img/password.svg">
+            <img class="hidePsw" src="../assets/img/hideEye.svg">
           </div>
           <!--Currency-->
           <div class="currency">
