update links Relates #35

--- a/login/login.html
+++ b/login/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="../login/login.css">
 
     <title>Shopello</title>
 </head>
@@ -12,8 +12,8 @@
     <div>
       <header class="container">
         <h1>Welcome, We missed you</h1>
-        <p>Don’t have account?<a href="sign-up.html" style="color:#2CB674"> Create new account</a>.</p>
-        <img src="assets/img/login.svg">
+        <p>Don’t have account?<a href="../createAccount/createAccount.html" style="color:#2CB674"> Create new account</a>.</p>
+        <img src="../assets/img/login.svg">
     
         </header>
         <form>
@@ -24,19 +24,19 @@
             <div class="mailIcon">
               <label for="email">Email</label>
               <input id="email" type="text" placeholder="Enter Your Email" name="email" required>
-              <img class="mailimg" src="assets/img/email.svg">
+              <img class="mailimg" src="../assets/img/email.svg">
               </div>
               <!-- password Input and Icons-->
               <div class="pswIcon">
               <label for="password">Password</label>
               <input id="password" type="password" placeholder="Enter Your Password" name="password" required>
-              <img  class="pswimg" src="assets/img/password.svg">
-              <img class="hidePsw" src="assets/img/hideEye.svg">
+              <img  class="pswimg" src="../assets/img/password.svg">
+              <img class="hidePsw" src="../assets/img/hideEye.svg">
             </div>
         
           </div>
         </form> 
-        <button type="submit" class="login-btn" onclick="window.location.href='/home/home.html';">Login</button>
+        <button type="submit" class="login-btn" onclick="window.location.href='../home/home.html';">Login</button>
     </div>
 </body>
 </html>
