fixed the slider button in the Boarding page Relate #37

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="slider">
       <div class="slides">
         <!-- slider radio button starts -->
-        <input type="radio" name="radio-btn" id="radio1" />
+        <input type="radio" name="radio-btn" id="radio1" checked/>
         <input type="radio" name="radio-btn" id="radio2" />
         <input type="radio" name="radio-btn" id="radio3" />
         <!-- slider radio dutton ends -->
@@ -62,9 +62,9 @@
       </div>
       <!-- manual navigation start-->
       <div class="navigation-manual">
-        <label for="radio1" class="manual-btn"></label>
-        <label for="radio2" class="manual-btn"></label>
-        <label for="radio3" class="manual-btn"></label>
+        <label for="radio1" class="manual-btn" id="manual-btn"></label>
+        <label for="radio2" class="manual-btn" id="manual-btn"></label>
+        <label for="radio3" class="manual-btn" id="manual-btn"></label>
       </div>
       <!-- manual navigation end-->
     </div>
