--- a/createAccount/createAccount.html
+++ b/createAccount/createAccount.html
@@ -27,7 +27,7 @@
             <!--Email input and icon-->
             <div class="mailIcon">
             <label for="email">Email</label>
-            <input id="email" type="text" placeholder="Enter Your Email" name="email" required>
+            <input id="email" type="email" placeholder="Enter Your Email" name="email" required>
             <p id="msgMail">This email has been registered</p>
             <img class="mailimg" src="../assets/img/email.svg">
             </div>
