changed the pluss and minus icons Relates #46

--- a/details/details.html
+++ b/details/details.html
@@ -8,10 +8,15 @@
     <title>Document</title>
   </head>
   <body>
+
+
+    <!-- back button -->
     <button class="backBtn">
       <img src="../assets/img/back.svg" alt="" />
       Back
     </button>
+
+    <!-- body of the detailspage -->
     <div class="details" id="details">
       <img src="../assets/img/Rectangle 34.svg" alt="" />
       <div class="categoryPrice">
@@ -31,17 +36,21 @@
           Eligendi, aliquam.
         </p>
       </div>
+
+      <!-- div to add or remove item and to calculate the total price -->
       <div class="quantityPrice">
         <div class="quantity">
-          <button class="minus" id="minus">-</button>
+          <button class="minus" id="minus"><img src="../assets/img/minus.svg" alt=""></button>
           <div class="amount" id="amount">1</div>
-          <button class="plus" id="plus">+</button>
+          <button class="plus" id="plus"><img src="../assets/img/plus.svg" alt=""></button>
         </div>
         <div class="price">
           <p class="ttl">Total:</p>
           <div class="totalPrice" id="totalPrice"></div>
         </div>
       </div>
+
+      <!-- buttons to buy or add to cart -->
       <div class="buyAddbtns">
         <button class="buy" id="buy">Buy</button>
         <button class="add" id="add">Add to cart</button>
