remove option tag and remove label id Relates #54

--- a/createAccount/createAccount.html
+++ b/createAccount/createAccount.html
@@ -33,7 +33,7 @@
             </div>
             <!-- password Input and Icons-->
             <div class="pswIcon">
-            <label for="password" id="password">Password</label>
+            <label for="password" >Password</label>
             <input id="password" type="password" placeholder="Enter Your Password" name="password" required>
             <img  class="pswimg" src="../assets/img/password.svg">
             <img class="hidePsw" src="../assets/img/hideEye.svg">
@@ -42,8 +42,7 @@
           <div class="currency">
             <label for="currency">Currency</label>
           <select id="currency" name="currency">
-            <option value="USD">USD</option>
-            <option value=""></option>
+            
           </select> 
         </div>
         <p id="msgEmpty">Please Fill All Required Field</p>
