add id to element tag >relates#49

--- a/home/home.html
+++ b/home/home.html
@@ -11,15 +11,15 @@
 </head>
 
 <body>
-  <div class="container">
+  <div id="container" class="container">
     <!-- Header -->
     <header>
-      <h1>Shopello</h1>
+      <h1 id="nameOfApp">Shopello</h1>
       <nav class="nav">
         <img class="navItem" src="../assets/img/notification.svg" loading="lazy" alt="notification">
         <div class="navItem wrapCart">
           <img src="../assets/img/cart.svg" loading="lazy" alt="cart">
-          <span class="count">3</span>
+          <span id="count" class="count"></span>
         </div>
         <span>Sign up</span>
       </nav>
