--- a/details/details.html
+++ b/details/details.html
@@ -18,22 +18,18 @@
 
     <!-- body of the detailspage -->
     <div class="details" id="details">
-      <img src="../assets/img/Rectangle 34.svg" alt="" />
+      <img src="" id ='productImage'alt="" />
       <div class="categoryPrice">
-        <p class="category">Electronic</p>
+        <p class="category" id="productCategory">Electronic</p>
         <div class="priceTag" id="priceTag">$
           <div id="originalPice">55</div>
         </div>
       </div>
       <div class="title">
-        <p>SanDisk SSD PLUS 1TB internal SSD - SATA iii 6 GB/s</p>
+        <p id="productTitle"></p>
       </div>
       <div class="description">
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero placeat
-          quia, eligendi quos dolor sunt provident quae voluptas saepe dolores,
-          odit itaque sapiente. Alias quibusdam autem molestias molestiae!
-          Eligendi, aliquam.
+        <p id="productDesc">
         </p>
       </div>
 
