--- a/details/details.html
+++ b/details/details.html
@@ -22,7 +22,7 @@
       <div class="categoryPrice">
         <p class="category" id="productCategory">Electronic</p>
         <div class="priceTag" id="priceTag">$
-          <div id="originalPice">55</div>
+          <div id="originalPice"></div>
         </div>
       </div>
       <div class="title">
