--- a/login/login.html
+++ b/login/login.html
@@ -21,7 +21,7 @@
             <!--Email input and icon-->
             <div class="mailIcon">
               <label for="email">Email</label>
-              <input id="email" type="text" placeholder="Enter Your Email" name="email" required>
+              <input id="email" type="email" placeholder="Enter Your Email" name="email" required>
               <img class="mailimg" src="../assets/img/email.svg">
               </div>
               <!-- password Input and Icons-->
