--- a/createAccount/createAccount.html
+++ b/createAccount/createAccount.html
@@ -33,7 +33,7 @@
             </div>
             <!-- password Input and Icons-->
             <div class="pswIcon">
-            <label for="password" id="password">Password</label>
+            <label for="password">Password</label>
             <input id="password" type="password" placeholder="Enter Your Password" name="password" required>
             <img  class="pswimg" src="../assets/img/password.svg">
             <img class="hidePsw" src="../assets/img/hideEye.svg">
