add links for pages >relates#61

--- a/home/home.html
+++ b/home/home.html
@@ -17,11 +17,11 @@
       <h1 id="nameOfApp">Shopello</h1>
       <nav class="nav">
         <img class="navItem" src="../assets/img/notification.svg" loading="lazy" alt="notification">
-        <div class="navItem wrapCart">
+        <div id="cartShow" class="navItem wrapCart">
           <img src="../assets/img/cart.svg" loading="lazy" alt="cart">
           <span id="count" class="count"></span>
         </div>
-        <span>Sign up</span>
+        <span id="account">Sign up</span>
       </nav>
     </header>
 
