calculate the total price, display the number of items in cart and make the directory of add more items button relates #64

--- a/cart/cart.html
+++ b/cart/cart.html
@@ -83,7 +83,7 @@
                     <h2 class="price" style="font-size: 1.25rem;"> $86.66</h2>
                 </div>
                 <div class="buy-block">
-                    <h2 class="normal-text" style="color: #2CB674; font-size: 1.125rem;">Add more items</h2>
+                    <a href="../home/home.html" style="text-decoration: none;"> <h2 class="normal-text" style=" cursor: pointer; color: #2CB674; font-size: 1.125rem;">Add more items</h2></a>
                     <button class="cart-btn">Buy</button>
                 </div>
             </div>
