--- a/createAccount/createAccount.html
+++ b/createAccount/createAccount.html
@@ -47,10 +47,11 @@
         </div>
         <p id="msgEmpty">Please Fill All Required Field</p>
         </div>
-        </form> 
         <!--submit button-->
-        <button type="submit" class="signupbtn">Get Started</button>
+        <button type="submit" class="signupbtn" >Get Started</button>
+        </form> 
+        
     </div>
-    <script src="../createAccount/createAccount.js"></script>
+    <script src="createAccount.js"></script>
 </body>
 </html>
