changed the location of the back button intro the details div so that the styling is not ruined Relates #63

--- a/details/details.html
+++ b/details/details.html
@@ -11,13 +11,14 @@
 
 
     <!-- back button -->
-    <button class="backBtn">
-      <img src="../assets/img/back.svg" alt="" />
-      Back
-    </button>
 
     <!-- body of the detailspage -->
+    
     <div class="details" id="details">
+      <button class="backBtn" onclick="location.href='../home/home.html'">
+        <img src="../assets/img/back.svg" alt="" />
+        Back
+      </button>
       <img src="" id ='productImage'alt="" />
       <div class="categoryPrice">
         <p class="category" id="productCategory">Electronic</p>
