--- a/cart/cart.html
+++ b/cart/cart.html
@@ -37,7 +37,7 @@
                 <div class="empty-cart">
                     <img class="empty-img" src="../assets/img/empty cart.svg" alt="">
                     <h2 class="normal-text cart-text" style="font-size: 1.375rem;">Your <span style="font-weight: 600; font-size: 1.375rem; ">cart is empty</span>. Please add a few products</h2>
-                    <button class="cart-btn" style="width: 15.625rem; margin: 3.125rem 0;">Go to the store</button>
+                    <a href="../home/home.html"><button class="cart-btn" style="width: 15.625rem; margin: 3.125rem 0;">Go to the store</button></a>
                 </div>
                 <div class="product-list cart-display" id="cartList">
                     <!-- <div class="product-block">
@@ -77,7 +77,7 @@
                 </div>
             </div>
             
-            <div class="cart-bottom cart-display">
+            <div class="cart-bottom cart-display" id="cart-bottom">
                 <div class="price-block">
                     <h2 class="normal-text">Togather to pay</h2>
                     <h2 class="price" style="font-size: 1.25rem;"> $86.66</h2>
