added a function that receives the currenc and calculates the rate of the producs Relates #68

--- a/details/details.html
+++ b/details/details.html
@@ -22,7 +22,8 @@
       <img src="" id ='productImage'alt="" />
       <div class="categoryPrice">
         <p class="category" id="productCategory">Electronic</p>
-        <div class="priceTag" id="priceTag">$
+        <div class="priceTag">
+          <div id="priceTag"></div>
           <div id="originalPice"></div>
         </div>
       </div>
