--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
     <!-- image slider ends -->
     <!-- starting button -->
-    <div class="start-btn" onclick="location.href='../home/home.html'">
+    <div class="start-btn" onclick="location.href='./home/home.html'">
       <button>Get Started</button>
     </div>
     <!-- starting button -->
