reorder element for tagPrice >relates #86

--- a/details/details.html
+++ b/details/details.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="details.css" />
-    <title>Document</title>
+    <title>Shopello</title>
   </head>
   <body>
     <!-- back button -->
@@ -42,8 +42,8 @@
       <div class="categoryPrice">
         <p class="category" id="productCategory">Electronic</p>
         <div class="priceTag">
-          <div id="originalPice"></div>
           <div id="priceTag"></div>
+          <div id="originalPice"></div>
         </div>
       </div>
       <div class="title">
