--- a/createAccount/createAccount.html
+++ b/createAccount/createAccount.html
@@ -16,7 +16,7 @@
         <h1>Create Account</h1>
         <p>Already have an account? <a href="../login/login.html" style="color:#2CB674">Login</a>.</p>
         </header>
-        <form>
+        <div>
             <div class="form">
             <!--Name input and icon-->
           <div class="nameIcon">
@@ -49,7 +49,7 @@
         </div>
         <!--submit button-->
         <button type="submit" class="signupbtn" >Get Started</button>
-        </form> 
+        </div> 
         
     </div>
     <script src="createAccount.js"></script>
