--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./onboarding/onboarding.css" />
-    <title>Document</title>
+    <title>Shopello</title>
   </head>
   <body>
     <!-- image slider starts -->
